--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,24 +1,24 @@
-.header__lang_link {
+.header__lang-link {
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 28px; 
+    line-height: 28px;
     text-decoration: none;
     color: white;
     margin: 0;
 }
 
-.header__lang_link:first-of-type {
+.header__lang-link:first-of-type {
     margin-right: 18px;
     border-bottom: 2px solid;
 }
 
-.header__lang_link:hover {
+.header__lang-link:hover {
     opacity: .8;
 }
 
 @media screen and (max-width: 425px) {
-    .header__lang_link {
+    .header__lang-link {
         font-size: 18px;
         line-height: 1.11;
     }
