--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,15 +1,14 @@
 .cover__overlay {
-    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     z-index: 1;
-    background:rgba(42,44,47,.3);
+    /*background:rgba(42,44,47,.3);*/
 
 }
 
 .cover__overlay:hover {
-    background:rgba(42,44,47,.8);
+    /*background:rgba(42,44,47,.8);*/
 }
