--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,10 +1,10 @@
 .cover__text {
+    margin: auto;
     text-decoration: none;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
     z-index: 1;
 }
