--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,7 +7,8 @@
     align-items: center;
     flex-direction: column;
     position: relative;
-}
+    background-image: url(../../sprint-3-images/cover-trains.jpg);
+  }
 
 @media screen and (max-width: 768px) {
     .cover {
