--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,6 +5,7 @@
     font-size: 72px;
     line-height: 1.06;
     text-align: center;
+    max-width: 560px;
 }
 
 @media screen and (max-width: 560px) {
