--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,23 +1,67 @@
 .cover {
-    margin: 92px auto 0 auto;
-    max-width: 1184px;
-    max-height: 740px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    background-image: url(../../sprint-3-images/cover-trains.jpg);
+  margin: 92px auto 0 auto;
+  max-width: 1184px;
+  min-height: 740px;
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+  position: relative;
+  background-image: url(../../sprint-3-images/cover-trains.jpg);
+  background-size: cover;
+}
+
+@media screen and (max-width: 1120px) {
+  .cover {
+    min-height: 700px;
   }
+}
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .cover {
+    min-height: 575px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .cover {
+    min-height: 513px;
+  }
+}
 
 @media screen and (max-width: 768px) {
-    .cover {
-        margin-top: 90px;
-    }
+  .cover {
+    margin-top: 90px;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .cover {
+    min-height: 450px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .cover {
+    min-height: 325px;
+  }
 }
 
 @media screen and (max-width: 425px) {
-    .cover {
-        margin-top: 66px;
-    }
+  .cover {
+    margin-top: 66px;
+    min-height: 265px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    min-height: 200px;
+  }
 }
