Проектная работа №3. Путешествие по России. На 2ое ревью.

--- a/blocks/intro/__row-bold/intro__row-bold.css
+++ b/blocks/intro/__row-bold/intro__row-bold.css
@@ -1,7 +1,7 @@
-.intro__row {
+.intro__row-bold {
   margin: 0;
   font-style: normal;
-  font-weight: normal;
+  font-weight: bold;
   font-size: 12px;
   line-height: 1.5;
 }
