--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,6 +8,7 @@
   position: relative;
   background-image: url(../../sprint-3-images/cover-trains.jpg);
   background-size: cover;
+  background-position: center;
 }
 
 @media screen and (max-width: 1120px) {
