--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,25 +1,24 @@
 .header__lang-link {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 28px;
-    text-decoration: none;
-    color: white;
-    margin: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+  text-decoration: none;
+  color: white;
+  margin: 0 18px 0 0;
 }
 
-.header__lang-link:first-of-type {
-    margin-right: 18px;
-    border-bottom: 2px solid;
+.header__lang-link:last-of-type {
+  margin: 0;
 }
 
 .header__lang-link:hover {
-    opacity: .8;
+  opacity: .8;
 }
 
 @media screen and (max-width: 425px) {
-    .header__lang-link {
-        font-size: 18px;
-        line-height: 1.11;
-    }
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.11;
+  }
 }
