--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,18 +1,19 @@
 .place__website {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  margin: 0;
 }
 
 @media screen and (max-width: 520px) {
-    .place__website {
-        grid-row: 2;
-    }
+  .place__website {
+    grid-row: 2;
+  }
 }
 
 @media screen and (max-width: 425px) {
-    .place__website {
-        padding: 0 16px;
-    }
+  .place__website {
+    padding: 0 16px;
+  }
 }
